--- a/src/app/components/details/details.component.html
+++ b/src/app/components/details/details.component.html
@@ -1,2 +1,6 @@
-<h2>Dettagli dell'Incantesimo</h2>
-<p><strong>Nome:</strong> {{ spell.name }}</p>
+
+<h1 mat-dialog-title>Dettagli dell'elemento</h1>
+<div mat-dialog-content><p><strong>Nome:</strong> {{ spell.name }}</p></div>
+<div mat-dialog-actions>
+  <button mat-button mat-dialog-close>Close</button>
+</div>
