--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,1 +1,5 @@
-<app-card *ngFor="let spell of spells" class="card-container" [spellData]="spell"></app-card>
+
+<div class="card-row">
+    <app-card *ngFor="let spell of spells" class="card-container" [spellData]="spell"></app-card>
+  </div>
+  
