--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,29 +1,24 @@
-
 <p class="header-toolbar">
-    <mat-toolbar color='primary'>
-      <mat-toolbar-row class="header">
-        <span class="title-header">Dungeon&Dragons </span>
-        <span class="example-spacer"></span>
+  <mat-toolbar>
+    <mat-toolbar-row class="header">
+      <span class="title-header">Dungeon&Dragons </span>
+      <span class="example-spacer"></span>
+    <span class="example-spacer"></span>
+      <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon"
+        [routerLink]="['/favourites']" routerLinkActive="router-link-active">
+        <mat-icon>favorite</mat-icon>
+      </button>
+      <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon"
+        [routerLink]="['/home']" routerLinkActive="router-link-active">
+        <mat-icon aria-hidden="false" aria-label="Example home icon" fontIcon="home"></mat-icon>
+      </button>
+    </mat-toolbar-row>
+    <mat-slide-toggle (toggleChange)="changeTheme()" class="example-margin" [checked]="isLightTheme">
 
 
 
-        <span class="example-spacer"></span>
-        <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon" [routerLink]="['/favourites']" routerLinkActive="router-link-active" >
-            <mat-icon>favorite</mat-icon>
-          </button>
-          <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon" [routerLink]="['/home']" routerLinkActive="router-link-active" >
-            <mat-icon aria-hidden="false" aria-label="Example home icon" fontIcon="home"></mat-icon>
-        </button>
-      </mat-toolbar-row>
-      <mat-slide-toggle (toggleChange)="changeTheme()"
-      class="example-margin"
+      {{isLightTheme? 'Dark' : 'Light'}}
+    </mat-slide-toggle>
 
-      [checked]="isLightTheme">
-
-
-
-{{isLightTheme? 'Dark' : 'Light'}}
-  </mat-slide-toggle>
-
-    </mat-toolbar>
-  </p>
+  </mat-toolbar>
+</p>
