--- a/src/app/components/favourites/favourites.component.html
+++ b/src/app/components/favourites/favourites.component.html
@@ -1,3 +1,6 @@
 
-  <app-card *ngFor="let spell of favourites" [spellData]="spell" [isFavourites]="true"></app-card>
+<div class="card-row">
+  
+  <app-card  class="card-container" *ngFor="let spell of favourites" [spellData]="spell" [isFavourites]="true"></app-card>
  
+</div>
