--- a/src/app/components/list/list.component.scss
+++ b/src/app/components/list/list.component.scss
@@ -2,6 +2,9 @@
     display: flex;
     flex-wrap: wrap;
     gap: 24px;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
 
   }
 
@@ -14,4 +17,13 @@
     z-index: 9999;
     position: fixed;
     bottom:10px;
+    right: 40px;
+    font-size: 40px;
+    font-family: 'MedievalSharp', cursive !important;
+    border: none;
+    background-color: rgb(22, 22, 22);
+    color: white;
+    cursor: pointer;
+    width: 100px;
+    border-radius: 30px;
   }
